--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,7 @@ jobs:
         pip install pylint pylint-quotes mypy pycodestyle
     - name: Analysing the code with pylint
       run: |
+        cd osm_painter
         pycodestyle osm_painter
         pylint --load-plugins pylint_quotes osm_painter
         mypy osm_painter
