--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,10 +16,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint pylint-quotes mypy pycodestyle
-    - name: Analysing the code with pylint
+        pip install -r requirements.txt
+    - name: Static analysis
       run: |
-        ls
         pycodestyle osm_painter
         pylint --load-plugins pylint_quotes osm_painter
         mypy osm_painter
