--- a/mypy.ini
+++ b/mypy.ini
@@ -1,6 +1,7 @@
 [mypy]
-python_version = 3.9
+python_version = 3.8
 ignore_missing_imports = True
+plugins = numpy.typing.mypy_plugin
 
 disallow_any_unimported = False
 disallow_untyped_defs = True
