--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,7 @@ pylint~=2.10.2
 pylint-quotes~=0.2.3
 mypy~=0.910
 pycodestyle~=2.7.0
+elevation~=1.1.3
+requests~=2.25.1
+polyline~=1.4.0
+types-requests~=2.25.6
